[package]
authors = ["kitagawa-hr <kitagawahr@gmail.com>"]
description = "A tool to transpile JSON Schema into schemas for data processing"
edition = "2018"
license = "MPL-2.0"
name = "jsonschema-transpiler-py"
readme = "README.md"
repository = "https://github.com/kitagawa-hr/jsonschema-transpiler"
version = "1.10.0"

[lib]
name = "jst"
crate-type = ["cdylib"]


[dependencies]
jsonschema-transpiler = { path = "../.." }
pyo3 = { version = "0.14.5", features = ["extension-module"] }
serde_json = "1.0"
